Temp Fix for banner overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -61,6 +61,7 @@ body {
 	float: left;
 	padding: $global_padding;
 	padding-top: $top_padding;
+	overflow-y: auto;
 }
 
 .info_me {
